fixed some css selectors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,4 +14,5 @@ $stepify-dark-salmon: #C96142;
 $stepify-gray: #999999;
 $stepify-dark-gray: #565252;
 $stepify-light-gray: #F2F2F2;
+$stepify-light-blue: #284f8a;
 
