--- a/app/assets/stylesheets/layouts/_main-layouts.scss
+++ b/app/assets/stylesheets/layouts/_main-layouts.scss
@@ -1,5 +1,13 @@
-.content-vertical-space{
+.content-vertical-space {
 background-color: #1b3660;
 min-height: 100vh;
 padding-bottom: 40px;
 }
+
+.page-header {
+  color: white;
+  padding-top:15px;
+  padding-bottom:15px;
+  border: none;
+}
+
