--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -18,7 +18,7 @@
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
 
-    <div class="container steplist-cards-background" style="padding: 0px; background-color: #284f8a;">
+    <div class="container steplist-cards-background">
         <div class="org-banner">
           <%= image_tag banner_path, class: "portrait" %>
         </div>
