--- a/app/views/pages/my_orgs.html.erb
+++ b/app/views/pages/my_orgs.html.erb
@@ -2,7 +2,7 @@
 <div class = "content-vertical-space">
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
-    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
+    <div class="container steplist-cards-background">
     <% @my_orgs.each do |org| %>
       <%= render 'shared/org_card', org: org  %>
     <% end %>
