--- a/app/assets/stylesheets/components/_steplist-card.scss
+++ b/app/assets/stylesheets/components/_steplist-card.scss
@@ -34,11 +34,11 @@
 }
 
 .steplist-cards-background{
-  min-height: 100hv !important;
+  min-height: 100hv!important;
+  padding-top: 0px;
   padding: 20px;
-  background-color: rgba(255,0,0,0.7);
+  background-color: $stepify-light-blue;
   p {
-
     text-align: center;
   }
 }
