--- a/app/views/pages/my_lists.html.erb
+++ b/app/views/pages/my_lists.html.erb
@@ -3,7 +3,7 @@
 <div class ="content-vertical-space">
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
-    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
+    <div class="container steplist-cards-background">
       <% @steplists.each do  |steplist|%>
         <%= render 'shared/steplist_card', steplist: steplist %>
       <% end %>
