--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -2,7 +2,7 @@
 <div class ="content-vertical-space">
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto %>
-      <div class="container steplist-cards-background" style= "background-color: #284f8a;">
+      <div class="container steplist-cards-background">
         <% @steplists.each do  |steplist|%>
           <%=  render 'shared/steplist_card', steplist: steplist %>
         <% end %>
