--- a/app/views/visualizations/dashboard.html.erb
+++ b/app/views/visualizations/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class ="content-vertical-space">
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: "Dashboard for: #{current_user.first_name.capitalize} #{current_user.last_name.capitalize}" %>
-    <div class="container steplist-cards-background" style= "background-color: #284f8a;">
+    <div class="container steplist-cards-background">
       <table class="table dashboard-text">
         <tr>
           <th>
