--- a/app/assets/stylesheets/components/_new-navbar.scss
+++ b/app/assets/stylesheets/components/_new-navbar.scss
@@ -21,7 +21,6 @@
   height: 0;
   clear: both;
   visibility: hidden;
-
 }
 
 #stepify-logo{
@@ -34,7 +33,7 @@
 
 
 #cssmenu ul li {
-  display: inline-block;
+  // display: inline-block;
   padding: 0;
   margin: 0;
 }
