--- a/app/views/shared/_navbar-stepify.html.erb
+++ b/app/views/shared/_navbar-stepify.html.erb
@@ -1,46 +1,3 @@
-<div id='cssmenu'>
-  <ul class="" style="text-align:right;">
-
-    <li class='last' style="float: left;" id="stepify-logo"><%= link_to root_path, class: "navbar-wagon-brand" do %>
-        <%= image_tag "logo4.png"%>
-      <% end %>
-    </li>
-
-
-    <li class='first'>
-      <div class="search-bar" style="">
-        <%= form_tag search_path,method: :get do %>
-          <%= text_field_tag :query,
-          params[:query],
-          class: "form-control", placeholder: 'See steps for...', style: 'background-color: #f5f5f5; color: rgba(0, 0, 0, 0.075);border-style: none;color: #777; height: 30px; margin-top: 7px' %>
-        <% end %>
-      </div>
-    </li>
-    <li class='last'><%= link_to "Companies", organizations_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    </li>
-
-    <!-- Stepify if logged in ///// -->
-    <% if user_signed_in? %>
-      <!-- Links when logged in////////// -->
-
-      <li class='last'><%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      </li>
-      <li class="last"><%= link_to "New Steplist", new_steplist_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      </li>
-      <!-- Login link (when logged out) -->
-      <% else %>
-        </li>
-        <li class='last'><%= link_to "All Steps", steplists_path, class: "navbar-wagon-item navbar-wagon-link" %>
-        </li>
-        <li class="last">
-          <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-        </li>
-    <% end %>
-
-
-
-  </ul>
-</div>
 
 <!-- TEST NAVBAR FROM BOOTSTRAP -->
 
@@ -57,45 +14,92 @@
       <a class="navbar-brand" href="#">Stepify</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+
+
+
+
+
+
+    <ul class="nav navbar-nav navbar-right">
+     <li>
+      <div class="search-bar" style="">
+        <%= form_tag search_path,method: :get do %>
+        <%= text_field_tag :query,
+        params[:query],
+        class: "form-control", placeholder: 'See steps for...', style: 'background-color: #f5f5f5; color: rgba(0, 0, 0, 0.075);border-style: none;color: #777; height: 30px; margin-top: 7px' %>
+        <% end %>
+      </div>
+    </li>
+
+    <li><%= link_to "Companies", organizations_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </li>
+
+
+
+
+
+
+
+
+
+
+    <!-- Stepify if logged in ///// -->
+    <% if user_signed_in? %>
+    <!-- Links when logged in////////// -->
+    <li><%= link_to "Dashboard", dashboard_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </li>
+
+    <li><%= link_to "New Steplist", new_steplist_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </li>
+    <!-- Login link (when logged out) -->
+
+
+
+
+      <li class="dropdown">
+        <% if current_user.user_photo.present? %>
+      <%= cl_image_tag current_user.user_photo,class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"   %>
+      <% else %>
+      <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+      <% end %>
+        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <li style="margin-left: 20px">
+            Hello, <%= current_user.first_name.capitalize %>
+          </li>
+          <li>
+            <%= link_to account_path do %>
+            <%= t(".account", default: "Account") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to edit_user_registration_path do %>
+            <%= t(".settings", default: "Settings") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+            <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        </ul>
+      </li>
+
+
+    <% else %>
+
+    <li><%= link_to "All Steps", steplists_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </li>
+    <li>
+      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </li>
+
+
+      <% end %>
+
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
 </nav>
 
 
