--- a/app/assets/stylesheets/components/_responsive-navbar.scss
+++ b/app/assets/stylesheets/components/_responsive-navbar.scss
@@ -8,7 +8,13 @@
   border-style: none;
 }
 
-.r-navbar-logo{
+#r-navbar-logo{
   background-color: #333333;
+  color: #fff;
+  border-style: none;
+  img{
+    height: 25px;
+  }
 }
+
 
