--- a/app/views/shared/_navbar-stepify.html.erb
+++ b/app/views/shared/_navbar-stepify.html.erb
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Stepify</a>
+      <a class="navbar-brand" id ="r-navbar-logo" href="#"><%= image_tag("logo4.png", :alt => "rss feed") %></a>
     </div>
 
 
