--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -5,12 +5,18 @@
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
     <div class="container steplist-cards-background">
       <p id="search-message">
-        Your search for: "<%=params[:query]%>" produced <%= @steplists.count  %> results
+        Your search for: "<%=params[:query]%>" produced <%= @public_results.count  %> public results
       </p>
       <% @steplists.each do  |steplist|%>
-        <% unless steplist.private? && current_user.organizations.exclude?(steplist.organization)  %>
-          <%= render 'shared/steplist_card', steplist: steplist %>
-        <% end %>
+        <% if !user_signed_in? %>
+            <% unless steplist.private? %>
+              <%=  render 'shared/steplist_card', steplist: steplist %>
+            <% end %>
+            <% else %>
+              <% unless steplist.private? && current_user.organizations.exclude?(steplist.organization)  %>
+                  <%=  render 'shared/steplist_card', steplist: steplist %>
+              <% end %>
+          <% end %>
       <% end %>
     </div>
   </div>
