--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -1,8 +1,9 @@
 .stepify-avatar{
-    height: 35px;
+  height: 35px;
   width: 35px;
   border-radius: 50%;
   margin-left: 20px;
+  margin-top: 7px;
 }
 
 .avatar {
@@ -25,7 +26,6 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
-
 
 .avatar-xl {
   width: 150px;
