--- a/app/assets/stylesheets/components/_responsive-navbar.scss
+++ b/app/assets/stylesheets/components/_responsive-navbar.scss
@@ -2,10 +2,14 @@
   background-color: $stepify-salmon;
   // text-transform: uppercase;
   margin-bottom: 0px;
-  font-size: 14px;
+  font-size: 12px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   border-style: none;
+    a:focus {
+  background-color: $stepify-dark-gray;
+  color: white;
+}
 }
 
 #r-navbar-logo{
@@ -16,5 +20,32 @@
     height: 25px;
   }
 }
+
+#r-navbar-search{
+color: red;
+margin-top:3px;
+border: none;
+background-color: #f5f5f5;
+color: rgba(0, 0, 0, 0.075);
+border-style: none;
+color: #777;
+height: 30px;
+margin: 10px;
+width: 80%;
+border-radius: 3%;
+}
+
+#r-navbar-text{
+  color: white !important;
+  font-size: 15px;
+  &:hover{
+    color: $stepify-dark-gray;
+  }
+  a{
+    color: white;
+  }
+
+}
+
 
 
