--- a/app/assets/stylesheets/components/_responsive-navbar.scss
+++ b/app/assets/stylesheets/components/_responsive-navbar.scss
@@ -7,7 +7,7 @@
   font-weight: 700;
   border-style: none;
     a:focus {
-  background-color: $stepify-dark-gray;
+  background-color: #333333;
   color: white;
 }
 }
