--- a/app/assets/stylesheets/components/_responsive-navbar.scss
+++ b/app/assets/stylesheets/components/_responsive-navbar.scss
@@ -7,13 +7,13 @@
   font-weight: 700;
   border-style: none;
     a:focus {
-  background-color: #333333;
+  background-color: #1C375D;
   color: white;
 }
 }
 
 #r-navbar-logo{
-  background-color: #333333;
+  background-color: #1C375D;
   color: #fff;
   border-style: none;
   img{
@@ -46,6 +46,21 @@ border-radius: 3%;
   }
 
 }
+
+
+.navbar-list {
+  text-align: right;
+}
+
+
+.nav-bar-search{
+    background-color: rgba(0, 0, 0, 0.075);
+    color: rgba(0, 0, 0, 0.075);
+    border-style: none;
+    color: white;
+    margin-top: 0px;
+}
+
 
 
 
