Made default avatar invisible in xs screen size

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,7 +49,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id ="r-navbar-logo" href="/"> <%= image_tag("logo4.png", :alt => "rss feed") %></a>
+      <a class="navbar-brand" id ="r-navbar-logo" href="/"> <%= image_tag("logo4.png", :alt => "Stepify Logo") %></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -103,7 +103,7 @@
           <%= cl_image_tag current_user.user_photo, class: "stepify-avatar dropdown-toggle hidden-xs", id: "navbar-wagon-menu", "data-toggle" => "dropdown"   %>
 
           <% else %>
-          <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle hidden-xs", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <% end %>
 
 
